package com.mascotin.inventorymanagementapplication.model.catalogue;

public enum AccessoryType {
    JUGUETE, ARTICULO_DE_ASEO, ROPA
}
