package com.mascotin.inventorymanagementapplication.model.catalogue;

public enum FoodType {
    BASICA, PREMIUM
}
