package com.mascotin.inventorymanagementapplication.model.catalogue;

public enum PetAge {
    CACHORRO, ADULTO, TODAS
}
