package com.mascotin.inventorymanagementapplication.model.catalogue;

public enum PetSize {
    PEQUENIA, MEDIANA, GRANDE, TODAS
}
