package com.mascotin.inventorymanagementapplication.model.catalogue;

public enum PetSpecie {
    PERRO, GATO, AVE, TODAS
}