package com.mascotin.inventorymanagementapplication.model.catalogue;

public enum ProductBrand {
    AGRIPAC, PRONACA, BIOALIMENTAR, PURINA, ALBEX
}