package com.mascotin.inventorymanagementapplication.model.catalogue;

public enum ProductManufacturer {
    SOLDIS, DISASVET, EQUADIS, PORTALVET
}