package com.mascotin.inventorymanagementapplication.model.catalogue;

public enum ProductStatus {
    AVAILABLE, OUT_OF_STOCK
}
