package com.mascotin.inventorymanagementapplication.model.catalogue;

public enum VeterinarySupplyType {
    ANTIPARASITARIO, VITAMINAS, PROBIOTICOS
}